--- a/public/config.yaml
+++ b/public/config.yaml
@@ -142,7 +142,7 @@ selected_module:
   # 将根据配置名称对应的type调用实际的LLM适配器
   LLM: ChatGLMLLM
   # TTS将根据配置名称对应的type调用实际的TTS适配器
-  TTS: CustomTTS
+  TTS: GPT_SOVITS_V3
   # 记忆模块，默认不开启记忆；如果想使用超长记忆，推荐使用mem0ai；如果注重隐私，请使用本地的mem_local_short
   Memory: nomem
   # 意图识别模块开启后，可以播放音乐、控制音量、识别退出指令。
@@ -440,12 +440,12 @@ TTS:
     #启动tts方法：
     #python api.py
     type: gpt_sovits_v3
-    url: "http://127.0.0.1:9880"
+    url: "http://192.168.1.81:9880"
     output_dir: tmp/
     text_language: "auto"
-    refer_wav_path: "caixukun.wav"
+    refer_wav_path: "fufu.wav"
     prompt_language: "zh"
-    prompt_text: ""
+    prompt_text: "我要通报批评某些人，为什么一放假回家。就不回我消息，是不想回。还是谁压住了你的手，不让你回，还是手指太短够不到屏幕？你想干嘛？说话！！！"
     top_k: 15
     top_p: 1.0
     temperature: 1.0
