--- a/public/config.yaml
+++ b/public/config.yaml
@@ -445,7 +445,7 @@ TTS:
     text_language: "auto"
     refer_wav_path: "fufu.wav"
     prompt_language: "zh"
-    prompt_text: "我要通报批评某些人，为什么一放假回家。就不回我消息，是不想回。还是谁压住了你的手，不让你回，还是手指太短够不到屏幕？你想干嘛？说话！！！"
+    prompt_text: "啧啧啧,说你是傻夫妇，你还真傻，拿提款机随便生病，进个医院就要花好几支付的钱，没有好身体，提款机的钱能轮上我们花再说了，现在都是工作八小时，如果提款机又怎么累也累的坏的好身体是不是就能二十四小时不停的工作，这样是不是能赚到更多的大米钱"
     top_k: 15
     top_p: 1.0
     temperature: 1.0
