--- a/public/config.yaml
+++ b/public/config.yaml
@@ -142,7 +142,7 @@ selected_module:
   # 将根据配置名称对应的type调用实际的LLM适配器
   LLM: ChatGLMLLM
   # TTS将根据配置名称对应的type调用实际的TTS适配器
-  TTS: GPT_SOVITS_V3
+  TTS: FishSpeech
   # 记忆模块，默认不开启记忆；如果想使用超长记忆，推荐使用mem0ai；如果注重隐私，请使用本地的mem_local_short
   Memory: nomem
   # 意图识别模块开启后，可以播放音乐、控制音量、识别退出指令。
@@ -408,8 +408,8 @@ TTS:
     seed: null
     channels: 1
     rate: 44100
-    api_key: "你的api_key"
-    api_url: "http://127.0.0.1:8080/v1/tts"
+    api_key: ""
+    api_url: "http://192.168.1.16:8080/v1/tts"
   GPT_SOVITS_V2:
     # 定义TTS API类型
     #启动tts方法：
